src/Components/Project Card/index.scss
@use "../../styles/index" as *;

.card-button {
  display: flex;
  flex-direction: row;
  position: absolute;
  left: -0.5vw;

  border-radius: 10px;
  border: none;

  font-size: 1.5vw;
  font-family: $main-font;
  text-decoration: none;
  letter-spacing: 0.5px;
  color: white;

  box-shadow:
    rgba(0, 0, 0, 0.09) 0px 2px 1px,
    rgba(0, 0, 0, 0.09) 0px 4px 2px,
    rgba(0, 0, 0, 0.09) 0px 8px 4px,
    rgba(0, 0, 0, 0.09) 0px 16px 8px,
    rgba(0, 0, 0, 0.09) 0px 32px 16px;

  z-index: 8;
  transform: scale(0);

  transition: filter 0.2s ease-in-out;

  &.github {
    bottom: 26vh;

    background: $github-gradient;
    padding: 5px 10px;

    span {
      padding-left: 5px;
    }
  }

  &.demo {
    bottom: 19vh;

    background: $demo-gradient;
    padding: 5px 15px;

    span {
      padding-left: 8px;
    }
  }

  &:hover {
    cursor: pointer;
    filter: brightness(1.2);
  }
}

.card {
  &-background {
    position: relative;
    top: 5vh;
    width: 28.2vw;
    height: 42vh;

    flex-shrink: 0;
    margin-right: 4vw;

    z-index: 4;

    transition: all 0.3s ease-in-out;

    &:nth-child(1) {
      margin-left: 4vw;
    }

    &:hover {
      cursor: pointer;
      transform: scale(1.08) translateY(-2vh) translateX(1vw);
      filter: brightness(1.2);
    }
  }

  &-images {
    .card-image-mobile {
      position: absolute;
      width: 11vw;
      height: 42vh;

      border-radius: 10px;
      object-fit: fill;

      box-shadow:
        rgba(0, 0, 0, 0.25) 0px 0.0625em 0.0625em,
        rgba(0, 0, 0, 0.25) 0px 0.125em 0.5em,
        rgba(255, 255, 255, 0.1) 0px 0px 0px 1px inset;

      &:nth-child(1) {
        z-index: 7;

        top: 4vh;

        filter: brightness(0.8);
      }

      &:nth-child(2) {
        z-index: 6;

        transform: rotatey(20deg);

        left: 5vw;
        top: 2vh;

        filter: brightness(0.5);
      }

      &:nth-child(3) {
        z-index: 5;

        transform: rotatey(20deg);

        left: 9vw;

        filter: brightness(0.3);
      }
    }
    .card-image-desktop {
      position: absolute;
      width: 22vw;
      height: 28vh;

      border-radius: 10px;
      object-fit: fill;

      box-shadow:
        rgba(0, 0, 0, 0.25) 0px 0.0625em 0.0625em,
        rgba(0, 0, 0, 0.25) 0px 0.125em 0.5em,
        rgba(255, 255, 255, 0.1) 0px 0px 0px 1px inset;

      &:nth-child(1) {
        z-index: 7;

        top: 16vh;
        left: -1vw;

        filter: brightness(0.8);
      }

      &:nth-child(2) {
        z-index: 6;

        transform: rotatey(10deg);

        top: 7vh;
        left: 1vw;

        filter: brightness(0.5);
      }

      &:nth-child(3) {
        z-index: 5;

        transform: rotatey(20deg);

        top: 0vh;
        left: 4vw;

        filter: brightness(0.3);
      }
    }
  }

  &-title {
    position: absolute;
    top: 5vh;
    left: 6vw;

    font-family: $main-font;
    font-size: 1.5vw;
    font-weight: 600;
    font-style: bold;
    letter-spacing: 0.1px;
    text-align: center;

    color: white;
    background: $card-header-gradient;

    width: 21vw;

    clip-path: $card-title-shape;

    padding: 10px;

    box-shadow:
      rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
      rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;

    z-index: 8;
  }

  &-description {
    position: absolute;
    top: 21%;
    left: 26%;
    width: 67%;
    height: 64%;

    display: flex;
    flex-direction: column;
    justify-content: space-between;

    padding: 10px 5px;
    background-color: $surface-colour;

    box-shadow:
      rgba(0, 0, 0, 0.25) 0px 54px 55px,
      rgba(0, 0, 0, 0.12) 0px -12px 30px,
      rgba(0, 0, 0, 0.12) 0px 4px 6px,
      rgba(0, 0, 0, 0.17) 0px 12px 13px,
      rgba(0, 0, 0, 0.09) 0px -3px 5px;

    z-index: 7;

    //Typography of elements below
    &-bullets {
      font-family: $main-font;
      font-size: 1.03vw;
      font-weight: 500;
      letter-spacing: 0.35px;

      color: $text-colour;

      display: flex;
      flex-direction: column;
      gap: 0.5rem;
      padding: 20px 5px 0px 15px;

      .bullet-item {
        display: flex;
        align-items: center;
        gap: 0.6rem;

        position: relative;

        .bullet-icon {
          font-size: 0.9rem;
          flex-shrink: 0;
        }
      }
    }

    &-tags {
      display: flex;
      flex-direction: row;
      justify-content: end;
      gap: 0.5rem;
      padding: 0.4rem 0.6rem;

      &::before {
        content: "";
        position: absolute;
        bottom: 24%;
        right: 5%;

        width: 15%;
        height: 6px;
        background-color: $primary-colour-two;
      }
    }
  }

  &-shards {
    position: absolute;
    inset: 0;
    width: 100%;
    height: 100%;

    transform: scale(0);
    filter: brightness(1.2);

    z-index: 9;
    pointer-events: none;
  }
}

